[package]
name = "polyminer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.1"
web3 = "0.19"
tiny-keccak = "2.0"
hex = "0.4"
ocl = "0.19"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10.5"
generic-array = "0.14"